--- a/Hello-OBP-OAuth1.0a-Mac/Hello-OBP-OAuth1.0a-Mac-Info.plist
+++ b/Hello-OBP-OAuth1.0a-Mac/Hello-OBP-OAuth1.0a-Mac-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>hello-obp-connect-logo</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.tesobe.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
