--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control?
-#
-# Pods/
-
+xcuserdata/
+*.xctimeline
+*.xccheckout
+*.mode2v3
+*.pbxuser
+*.zip
+(*)/
+.DS_Store
