Convert app source to use OBPKit

--- a/HelloOBP-Mac/Main/HelloOBP-Mac-Info.plist
+++ b/HelloOBP-Mac/Main/HelloOBP-Mac-Info.plist
@@ -7,7 +7,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>helloobp</string>
+				<string>x-${PRODUCT_BUNDLE_IDENTIFIER:lower}</string>
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
@@ -24,7 +24,7 @@
 	<key>CFBundleIconFile</key>
 	<string>hello-obp-connect-logo</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.tesobe.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -37,6 +37,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
